call preview function in RO QAs #135

--- a/OpenBioC/app/templates/app/qa.html
+++ b/OpenBioC/app/templates/app/qa.html
@@ -19,14 +19,14 @@
             <div class="grid-s12-m12-l12">
                 <ul class="tabs">
                     <li class="tab col s3 grid-s3-m3-l3"><a class="active" onclick="writeTabClicked(event)">Write</a></li>
-                    <li class="tab col s3 grid-s3-m3-l3"><a onclick="previewTabClicked(event)">Preview</a></li>
+                    <li class="tab col s3 grid-s3-m3-l3"><a ng-click="angular_previewTabClicked($event, qa_gen['{{ qa_type }}'].qa_current_comment_preview, qa_gen['{{ qa_type }}'].qa_current_comment)">Preview</a></li>
                 </ul>
             </div>
             <div class="active writeTabContent grid-s12-m12-l12">
                 <textarea class="validate" ng-model="qa_gen['{{ qa_type }}'].qa_current_comment"></textarea>
             </div>
             <div class="previewTabContent grid-s12-m12-l12 input-field">
-                Preview Text
+                <span ng-bind-html="qa_gen['{{ qa_type }}'].qa_current_comment_preview.html"></span>
             </div>
         </div>
         <!-- ------------------------------------------------------------------------------------ -->
@@ -86,24 +86,24 @@
                     <div class="grid-s12-m12-l12">
                         <ul class="tabs">
                             <li class="tab col s3 grid-s3-m3-l3"><a class="active" onclick="writeTabClicked(event)">Write</a></li>
-                            <li class="tab col s3 grid-s3-m3-l3"><a onclick="previewTabClicked(event)">Preview</a></li>
+                            <li class="tab col s3 grid-s3-m3-l3"><a ng-click="angular_previewTabClicked($event, 'qa_current_reply_1', qa_current_reply_1)">Preview</a></li>
                         </ul>
                     </div>
                     <div class="active writeTabContent grid-s12-m12-l12">
-                        <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                        <textarea class="validate" ng-model="qa_current_reply_1"></textarea>
                     </div>
                     <div class="previewTabContent grid-s12-m12-l12 input-field">
-                        Preview Text
+                        <span ng-bind-html="qa_current_reply_1_preview"></span>
                     </div>
                 </div>
                 <!-- ------------------------------------------------------------------------------------ -->
                 <div>
-                    <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
-                    <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
-                    <label><input type="radio" ng-model="qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
+                    <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="note" checked /><span>Note</span></label>
+                    <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="agree"/><span>Agree</span></label>
+                    <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
                 </div>
                 <a class="waves-effect waves-light btn-small" href=""
-                    ng-click="gen_qa_reply_save_button_pressed(post.id, qa_current_reply, qa_reply_opinion, '{{ qa_type }}')">Save</a>
+                    ng-click="gen_qa_reply_save_button_pressed(post.id, qa_current_reply_1, qa_gen['{{qa_type}}'].qa_reply_opinion, '{{ qa_type }}')">Save</a>
                 <a class="waves-effect waves-light btn-small" href=""
                     ng-click="qa_reply_cancel_button_pressed(post.id)">Cancel</a>
             </div>
@@ -128,24 +128,24 @@
                             <div class="grid-s12-m12-l12">
                                 <ul class="tabs">
                                     <li class="tab col s3 grid-s3-m3-l3"><a class="active" onclick="writeTabClicked(event)">Write</a></li>
-                                    <li class="tab col s3 grid-s3-m3-l3"><a onclick="previewTabClicked(event)">Preview</a></li>
+                                    <li class="tab col s3 grid-s3-m3-l3"><a ng-click="angular_previewTabClicked($event, 'qa_current_reply_2', qa_current_reply_2)">Preview</a></li>
                                 </ul>
                             </div>
                             <div class="active writeTabContent grid-s12-m12-l12">
-                                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                <textarea class="validate" ng-model="qa_current_reply_2"></textarea>
                             </div>
                             <div class="previewTabContent grid-s12-m12-l12 input-field">
-                                Preview Text
+                                <span ng-bind-html="qa_current_reply_2_preview"></span>
                             </div>
                         </div>
                         <!-- ------------------------------------------------------------------------------------ -->
                         <div>
-                            <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
-                            <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
-                            <label><input type="radio" ng-model="qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
+                            <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="note" checked /><span>Note</span></label>
+                            <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="agree"/><span>Agree</span></label>
+                            <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
                         </div>
                         <a class="waves-effect waves-light btn-small" href=""
-                            ng-click="gen_qa_reply_save_button_pressed(post2.id, qa_current_reply, qa_reply_opinion, '{{ qa_type }}')">Save</a>
+                            ng-click="gen_qa_reply_save_button_pressed(post2.id, qa_current_reply_2, qa_gen['{{ qa_type }}'].qa_reply_opinion, '{{ qa_type }}')">Save</a>
                         <a class="waves-effect waves-light btn-small" href=""
                             ng-click="qa_reply_cancel_button_pressed(post2.id)">Cancel</a>
                     </div>
@@ -171,24 +171,24 @@
                                     <div class="grid-s12-m12-l12">
                                         <ul class="tabs">
                                             <li class="tab col s3 grid-s3-m3-l3"><a class="active" onclick="writeTabClicked(event)">Write</a></li>
-                                            <li class="tab col s3 grid-s3-m3-l3"><a onclick="previewTabClicked(event)">Preview</a></li>
+                                            <li class="tab col s3 grid-s3-m3-l3"><a ng-click="angular_previewTabClicked($event, 'qa_current_reply_3', qa_current_reply_3)">Preview</a></li>
                                         </ul>
                                     </div>
                                     <div class="active writeTabContent grid-s12-m12-l12">
-                                        <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                        <textarea class="validate" ng-model="qa_current_reply_3"></textarea>
                                     </div>
                                     <div class="previewTabContent grid-s12-m12-l12 input-field">
-                                        Preview Text
+                                        <span ng-bind-html="qa_current_reply_3_preview"></span>
                                     </div>
                                 </div>
                                 <!-- ------------------------------------------------------------------------------------ -->
                                 <div>
-                                    <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
-                                    <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
-                                    <label><input type="radio" ng-model="qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
+                                    <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="note" checked /><span>Note</span></label>
+                                    <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="agree"/><span>Agree</span></label>
+                                    <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
                                 </div>
                                 <a class="waves-effect waves-light btn-small" href=""
-                                    ng-click="gen_qa_reply_save_button_pressed(post3.id, qa_current_reply, qa_reply_opinion, '{{ qa_type }}')">Save</a>
+                                    ng-click="gen_qa_reply_save_button_pressed(post3.id, qa_current_reply_3, qa_gen['{{ qa_type }}'].qa_reply_opinion, '{{ qa_type }}')">Save</a>
                                 <a class="waves-effect waves-light btn-small" href=""
                                     ng-click="qa_reply_cancel_button_pressed(post3.id)">Cancel</a>
                             </div>
@@ -214,24 +214,24 @@
                                             <div class="grid-s12-m12-l12">
                                                 <ul class="tabs">
                                                     <li class="tab col s3 grid-s3-m3-l3"><a class="active" onclick="writeTabClicked(event)">Write</a></li>
-                                                    <li class="tab col s3 grid-s3-m3-l3"><a onclick="previewTabClicked(event)">Preview</a></li>
+                                                    <li class="tab col s3 grid-s3-m3-l3"><a ng-click="angular_previewTabClicked($event, 'qa_current_reply_4', qa_current_reply_4)">Preview</a></li>
                                                 </ul>
                                             </div>
                                             <div class="active writeTabContent grid-s12-m12-l12">
-                                                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                                <textarea class="validate" ng-model="qa_current_reply_4"></textarea>
                                             </div>
                                             <div class="previewTabContent grid-s12-m12-l12 input-field">
-                                                Preview Text
+                                                <span ng-bind-html="qa_current_reply_4_preview"></span>
                                             </div>
                                         </div>
                                         <!-- ------------------------------------------------------------------------------------ -->
                                         <div>
-                                            <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
-                                            <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
-                                            <label><input type="radio" ng-model="qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
+                                            <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="note" checked /><span>Note</span></label>
+                                            <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="agree"/><span>Agree</span></label>
+                                            <label><input type="radio" ng-model="qa_gen['{{ qa_type }}'].qa_reply_opinion" value="disagree"/><span>Disagree</span></label>
                                         </div>
                                         <a class="waves-effect waves-light btn-small" href=""
-                                            ng-click="gen_qa_reply_save_button_pressed(post4.id, qa_current_reply, qa_reply_opinion, '{{ qa_type }}')">Save</a>
+                                            ng-click="gen_qa_reply_save_button_pressed(post4.id, qa_current_reply_4, qa_gen['{{ qa_type }}'].qa_reply_opinion, '{{ qa_type }}')">Save</a>
                                         <a class="waves-effect waves-light btn-small" href=""
                                             ng-click="qa_reply_cancel_button_pressed(post4.id)">Cancel</a>
                                     </div>
