edits to comply with merge #124

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -186,8 +186,8 @@
 	<!-- Discourse js -->
 	<script src="/static/app/discourse.js"></script>
 
-	<!-- Discourse graph Editor -->
-	<link rel="stylesheet" type="text/css" href="/static/app/pell.min.css">
+	<!-- Pell js 1.0.6 Discourse graph Editor -->
+	<link rel="stylesheet" type="text/css" href="/static/app/pell-1.0.6/dist/pell.min.css">
 
 
 </head>
@@ -345,7 +345,7 @@
 			$('.modal').modal();
 		});
 	</script>
-	<script src="/static/app/pell.min.js"></script>
+	<script src="/static/app/pell-1.0.6/dist/pell.min.js"></script>
 	<script type="text/javascript">
 		var editor = window.editor = pell.init({
 			element: document.getElementById('editor'),
