--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -596,6 +596,23 @@ nav {
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
+/* ----------------------------------------------------------------------------- Draft span ------------------------------------------------------------------------------------- */
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+.draft {
+    float: right; 
+    color: #fff;
+    padding: 6px;
+    border-radius: 2px;
+    font-size: 17px;
+    line-height: 15px;
+    letter-spacing: .5px;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
 /* ---------------------------------------------------------------------------------- Q & A ------------------------------------------------------------------------------------- */
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
