#145 modal for delete warning

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -235,7 +235,9 @@
 		{# include "app/navbar_default.html" #}
 
 
-
+		<!-- <div class="container py-5" ng-show="show_login"> -->
+			{% include "app/deleteModal.html" %}
+		<!-- </div> -->
 		{% comment %}
 		<div class="container py-5" ng-show="show_login">
 			{% include "app/login.html" %}
