--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -31,6 +31,7 @@
             <!-- Navbar Content -->
             <ul id="main-nav" class="right hide-on-med-and-down">
                 <!-- <li><a class="black-text" href ng-click="navbar_home_clicked()">Home</a></li> -->
+                <li><a class="waves-effect waves-light btn modal-trigger" href="#deleteModal">Modal</a></li>
                 <li><a class="black-text" ng-click="documenation_navbar_clicked()">Documentation</a></li>
                 <li ng-show="!username"><a href="#signModal" id="signInBtn" class="modal-trigger black-text" ng-click="navbar_signup_pressed()">Sign in</a></li> <!-- href="#signModal" -->
                 <li ng-show="username">
